--- a/src/app/static/index.html
+++ b/src/app/static/index.html
@@ -3,8 +3,8 @@
 <title>Example App</title>
 </head>
 <body>
-  hello world
+  hello worldl
   <div id="container"></div>
-  <script src="dist/static/index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
