--- a/app/view/popup.html
+++ b/app/view/popup.html
@@ -7,8 +7,12 @@
       require('babel-register');
       require('./popup');
     </script>
+    <style>
+      body {
+        margin: 0px;
+      }
+    </style>
   </head>
-
   <body>
     <div id="app"></div>
   </body>
