--- a/app/view/popup.html
+++ b/app/view/popup.html
@@ -2,11 +2,18 @@
 <html>
   <head>
     <title>electron es6 react boilerplate</title>
+    <link rel="stylesheet" href="reactSelect.css">
     <script>
       // install babel hooks in the renderer process
       require('babel-register');
       require('./popup');
     </script>
+    <style>
+      body {
+          display: block;
+          margin: 0px;
+      }
+    </style>
   </head>
 
   <body>
