--- a/app/view/popup.html
+++ b/app/view/popup.html
@@ -12,7 +12,34 @@
       body {
           display: block;
           margin: 0px;
+          font-family: "SanFranciscoText-Regular";
       }
+
+      @font-face {
+        font-family: "SanFranciscoText-Light";
+        font-weight: 200;
+        src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-thin-webfont.woff");
+      }
+
+      @font-face {
+        font-family: "SanFranciscoText-Regular";
+        font-weight: 400;
+        src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
+      }
+
+      @font-face {
+        font-family: "SanFranciscoText-Semibold";
+        font-weight: 600;
+        src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-semibold-webfont.woff");
+      }
+
+      @font-face {
+        font-family: "NotoSansKR-Regular";
+        font-style: normal;
+        font-weight: 400;
+        src: url("https://fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff");
+      }
+
     </style>
   </head>
 
